--- a/trunk/FlexLib/.project
+++ b/trunk/FlexLib/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FlexLib</name>
+	<name>hamster</name>
 	<comment></comment>
 	<projects>
 	</projects>
