--- a/MagicOfGathering/.project
+++ b/MagicOfGathering/.project
@@ -2,23 +2,22 @@
 <projectDescription>
 	<name>MagicOfGathering</name>
 	<comment></comment>
-	<projects>
-	</projects>
+	<projects></projects>
 	<buildSpec>
 		<buildCommand>
 			<name>com.adobe.flexbuilder.project.flexbuilder</name>
-			<arguments>
-			</arguments>
+			<arguments></arguments>
 		</buildCommand>
 		<buildCommand>
 			<name>com.adobe.flexbuilder.apollo.apollobuilder</name>
-			<arguments>
-			</arguments>
+			<arguments></arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>com.adobe.flexbuilder.apollo.apollonature</nature>
 		<nature>com.adobe.flexbuilder.project.flexnature</nature>
-		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
+		<nature>
+			com.adobe.flexbuilder.project.actionscriptnature
+		</nature>
 	</natures>
 </projectDescription>
