--- a/trunk/MagicOfGathering/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/MagicOfGathering/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Sat Oct 10 13:31:21 CST 2009
+#Mon Nov 30 17:17:18 CST 2009
 eclipse.preferences.version=1
+encoding//locale/zh_CN/action.properties=UTF-8
 encoding//locale/zh_CN/main.properties=UTF-8
 encoding/<project>=utf-8
