--- a/build.xml
+++ b/build.xml
@@ -7,53 +7,55 @@
 	<property name="APP_SRC" value="${APP_ROOT}/src"/>
 
 	<property name="HS_EFFECTS" value="${basedir}/HsEffects" />
+  <property name="HS_UPLOAD" value="${basedir}/HsUpload" />
 	<property name="HS_MAINLIB" value="${basedir}/FlexLib" />
 
 	<tstamp>
 		<format property="BUILD_TIME" pattern="MM/dd/yyyy HH:mm" locale="en"/>
 	</tstamp>
 
-    <taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar" />
+  <taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar" />
 
-    <target name="clean">
-		<echo message="*******************************************************"/>
-		<echo message="BUILD_TIME = ${BUILD_TIME}"/>
-		<echo message="Project: ${HS_EFFECTS}"/>
-		<echo message="*******************************************************"/>
-		<delete dir="${APP_ROOT}" />
-		<mkdir dir="${APP_ROOT}" />
-		<mkdir dir="${APP_ROOT}/src" />
+  <target name="clean">
+    <echo message="*******************************************************"/>
+    <echo message="BUILD_TIME = ${BUILD_TIME}"/>
+    <echo message="Project: ${HS_EFFECTS}"/>
+    <echo message="Project: ${HS_UPLOAD}"/>
+    <echo message="*******************************************************"/>
+    <delete dir="${APP_ROOT}" />
+    <mkdir dir="${APP_ROOT}" />
+    <mkdir dir="${APP_ROOT}/src" />
 	</target>
     
 	<target name="copySrc" depends="clean">
 		<copy todir="${APP_SRC}">
-			<fileset dir="${HS_EFFECTS}/src" excludes="*.mxml, *.as">
-			</fileset>
-			<fileset dir="${HS_MAINLIB}/src" excludes="*.mxml, *.as">
-			</fileset>
+			<fileset dir="${HS_EFFECTS}/src" excludes="*.mxml, *.as" includes="**/*" />
+      <fileset dir="${HS_UPLOAD}/src" excludes="*.mxml, *.as" includes="**/*" />
 		</copy>
 	</target>
 
 	<target name="build-swc" depends="copySrc">
+  
 		<fileset dir="${APP_SRC}" id="src.files">
 			<include name="**/**" />
 		</fileset>
 
-			<pathconvert
-				property="evaFramework_classes"
-				pathsep=" " dirsep="."
-				refid="src.files">
-				<map from="\" to="/"/>
-				<map from="${APP_SRC}/" to=""/>
-				<mapper>
-					<chainedmapper>
-						<globmapper from="*.as" to="*"/>
-					</chainedmapper>
-				</mapper>
-			</pathconvert>
+    <pathconvert
+      property="evaFramework_classes"
+      pathsep=" " dirsep="."
+      refid="src.files">
+      <map from="\" to="/"/>
+      <map from="${APP_SRC}/" to=""/>
+      <mapper>
+        <chainedmapper>
+          <globmapper from="*.as" to="*"/>
+        </chainedmapper>
+      </mapper>
+    </pathconvert>
 
 		<compc output="${APP_ROOT}/hamster.swc" include-classes="${evaFramework_classes}">
 			<source-path path-element="${APP_SRC}" /> 
 		</compc>
+    
 	</target>
 </project>
