--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- mySimpleBuild.xml -->
 <project name="My App Builder" basedir="." default="build-swc">
-
-	<property name="FLEX_HOME" value="C:/software/Flex_builder_3_plugin/sdks/3.2.0"/>
+  <property environment="env" />
+  
+	<property name="FLEX_HOME" value="${env.FLEX_HOME}"/>
 	<property name="APP_ROOT" value="${basedir}/ant-bin"/>
 	<property name="APP_SRC" value="${APP_ROOT}/src"/>
 
