--- a/MagicOfGathering/.settings/org.eclipse.core.resources.prefs
+++ b/MagicOfGathering/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Mon Nov 30 17:17:18 CST 2009
+#Sat Dec 26 09:27:38 CST 2009
 eclipse.preferences.version=1
 encoding//locale/zh_CN/action.properties=UTF-8
 encoding//locale/zh_CN/main.properties=UTF-8
+encoding//locale/zh_CN/module_menu.properties=UTF-8
 encoding/<project>=utf-8
