--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,7 @@
       <fileset dir="HsImageCropper/src" excludes="*.mxml, *.as" includes="**/*" />
       <fileset dir="HsTip/src" excludes="*.mxml, *.as" includes="**/*" />
       <fileset dir="HsFramework/src" excludes="*.mxml, *.as" includes="**/*" />
+      <fileset dir="HsCommon/src" excludes="*.mxml, *.as" includes="**/*" />
 		</copy>
     
  		<fileset dir="${APP_SRC}" id="src.files">
