--- a/trunk/HsMagicTheGathering/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/HsMagicTheGathering/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Thu Feb 18 17:15:03 CST 2010
+#Fri Feb 26 22:43:24 CST 2010
 eclipse.preferences.version=1
+encoding//locale/en_US/main.properties=UTF-8
+encoding//locale/zh_CN/main.properties=UTF-8
 encoding/<project>=utf-8
