--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -27,6 +27,7 @@
       <fileset dir="HsTip/src" excludes="*.mxml, *.as" includes="**/*" />-->
       <fileset dir="HsFramework/src" excludes="*.mxml, *.as" includes="**/*" />
       <fileset dir="HsCommon/src" excludes="*.mxml, *.as" includes="**/*" />
+      <fileset dir="HsPagination/src" excludes="*.mxml, *.as" includes="**/*" />
 		</copy>
     
  		<fileset dir="${APP_SRC}" id="src.files">
