--- a/android/HsaCalendar/AndroidManifest.xml
+++ b/android/HsaCalendar/AndroidManifest.xml
@@ -20,5 +20,5 @@
 		</receiver>
     </application>
     <uses-sdk android:minSdkVersion="7" />
-
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
 </manifest> 
