--- a/trunk/android/HsaCalendar/AndroidManifest.xml
+++ b/trunk/android/HsaCalendar/AndroidManifest.xml
@@ -11,7 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<receiver android:name="HsaCalendarWidget" >
+		<receiver android:name="HsaCalendarWidget" android:label="@string/widget44_name" >
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 		        <action android:name="org.hamster.calendar.click" />
