--- a/android/HsaCalendar/AndroidManifest.xml
+++ b/android/HsaCalendar/AndroidManifest.xml
@@ -24,4 +24,5 @@
     
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.ACCESS_CACHE_FILESYSTEM" />
 </manifest> 
