--- a/HsShowCase/.settings/org.eclipse.core.resources.prefs
+++ b/HsShowCase/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Sat Sep 11 14:45:34 CST 2010
+#Sun Oct 03 09:50:27 CST 2010
 eclipse.preferences.version=1
+encoding//locale/zh_CN/imageCropper.properties=UTF-8
 encoding/<project>=utf-8
