--- a/HsShowCase/.settings/org.eclipse.core.resources.prefs
+++ b/HsShowCase/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Sat Oct 09 22:45:25 CST 2010
+#Mon Oct 11 22:33:17 CST 2010
 eclipse.preferences.version=1
+encoding//locale/zh_CN/effects.properties=UTF-8
 encoding//locale/zh_CN/imageCropper.properties=UTF-8
 encoding//locale/zh_CN/imageRuler.properties=UTF-8
 encoding//locale/zh_CN/utility.properties=UTF-8
